# python-rtmidi-poetry-test

./: pyproject.toml
.github/workflows/: test-build.yml  windows.yml
python_rtmidi_poetry_test/: main.py
