[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-rtmidi-poetry-test"
version = "0.1.0"
description = "Testing using python-rtmidi in poetry"
authors = []

packages = [
    { include = "python_rtmidi_poetry_test" }
]

[tool.poetry.dependencies]
python = "^3.8"
python-rtmidi = { git = "https://github.com/s0600204/python-rtmidi.git", branch = "msys2" }
#{ git = "https://github.com/SpotlightKid/python-rtmidi.git", tag = "1.5.6" }

[tool.poetry.scripts]
rtmidi-poetry-test = "python_rtmidi_poetry_test.main:main"
